Pushing some fixes + Installer script so far (Please note Wkit.Installer.iss contains my paths)

--- a/WolvenKit/Views/Dialogs/SimpleMeshExporterDialog.xaml
+++ b/WolvenKit/Views/Dialogs/SimpleMeshExporterDialog.xaml
@@ -337,7 +337,7 @@
                                                 <hc:ProgressButton
                                                  Width="90"
                                                  Height="35"
-                                                 Content="Add rigs"
+                                                 Content="Add rigs" Click="ProgressButton_Click"
                                                  />
                                             </StackPanel>
 
