--- a/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
@@ -66,7 +66,8 @@
                     </MenuItem>
 
                     <MenuItem Header="Export">
-                        <MenuItem Header="Wem" />
+                        <MenuItem Click="MenuItem_Click_2" Header="Wem" />
+                        <MenuItem Click="MenuItem_Click_1" Header="Morphtarget" />
 
                         <MenuItem Click="MenuItem_Click" Header="Export Mesh" />
 
