--- a/WolvenKit/Views/Wizards/FirstSetupWizard/FinalizeSetupView.xaml
+++ b/WolvenKit/Views/Wizards/FirstSetupWizard/FinalizeSetupView.xaml
@@ -118,7 +118,7 @@
                                  HorizontalAlignment="Stretch"
                                  VerticalAlignment="Stretch"
                                  IsEnabled="False"
-                                 Text="{Binding Source={Binding ShowGuidedTour}, Path=., StringFormat={}{0}}" />
+                                 Text="{Binding ShowGuidedTour, StringFormat={}{0}}" />
                             </Grid>
                             <hc:Divider
                              Margin="0,32,10,0"
