--- a/WolvenKit/Views/Dialogs/InputDialogView.xaml
+++ b/WolvenKit/Views/Dialogs/InputDialogView.xaml
@@ -1,5 +1,5 @@
 <catel:DataWindow
- x:Class="WolvenKit.Views.Dialogs.InputDialog"
+ x:Class="WolvenKit.Views.Dialogs.InputDialogView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
@@ -7,7 +7,8 @@
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  Width="400"
  Height="20"
- mc:Ignorable="d">
+ mc:Ignorable="d"
+ >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
